--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:cjs": "tsc --module commonjs --outDir lib/cjs",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "jest",
+    "test": "jest --runInBand",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
     "watch": "tsc-watch --onSuccess \"node dist/index.js\""
