--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jest": "^29.7.0",
     "prettier": "^2.5.1",
     "ts-jest": "^29.2.5",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.1"
   },
   "dependencies": {
