local file example script

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test": "jest --runInBand",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
-    "watch": "tsc-watch --onSuccess \"node dist/index.js\""
+    "watch": "tsc-watch --onSuccess \"node dist/index.js\"",
+    "run-local-file": "npx ts-node -r tsconfig-paths/register -P ./tsconfig.json src/index.ts"
   },
   "keywords": [],
   "license": "MIT",
