--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@aws-sdk/client-dynamodb": "^3.637.0",
     "@aws-sdk/lib-dynamodb": "^3.637.0",
     "@types/jest": "^29.5.12",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "aws-sdk": "^2.1048.0",
