--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,15 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
+
     "baseUrl": "./src",
+    "outDir": "./lib",
+    "paths": {
+      "utils": ["/utils"],
+      "types/*": ["/types/*"],
+      "singleTable": ["/singleTable"],
+    },
+
     "declaration": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
@@ -13,7 +21,6 @@
     "noImplicitThis": true,
     "noUnusedLocals": false,
     "noUnusedParameters": true,
-    "outDir": "./dist",
     "rootDir": "./src",
     "skipLibCheck": true,
     "sourceMap": true,
