--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
     "watch": "tsc-watch --onSuccess \"node dist/index.js\"",
-    "run-local-file": "npx ts-node -r tsconfig-paths/register -P ./tsconfig.json src/index.ts"
+    "run-local-file": "npx ts-node -r tsconfig-paths/register -P ./tsconfig.json src/index.ts",
+    "publish": "yarn build-both && npm publish"
   },
   "license": "MIT",
   "devDependencies": {
