--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "format": "prettier --write .",
     "watch": "tsc-watch --onSuccess \"node dist/index.js\"",
     "run-local-file": "npx ts-node -r tsconfig-paths/register -P ./tsconfig.json src/index.ts",
-    "publish": "yarn build-both && npm publish"
+    "build-publish": "yarn build-both && npm publish"
   },
   "license": "MIT",
   "devDependencies": {
