--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://github.com/fabiosenracorrea/dynamodb-provider",
   "author": "fabiosenracorrea",
   "name": "dynamodb-provider",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "A dynamodb Provider that simplifies the native api. It packs with a Single Table adaptor/pseudo ORM for single table design",
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
@@ -11,10 +11,10 @@
     "url": "https://github.com/fabiosenracorrea/dynamodb-provider/issues"
   },
   "scripts": {
-    "build-both": "yarn check-usage && yarn build:esm && yarn build:cjs",
+    "build-both": "rm -rf ./lib yarn check-usage && yarn build:esm && yarn build:cjs",
     "build:esm": "yarn check-usage && tsc --project tsconfig.esm.json && tsc-alias -p tsconfig.esm.json",
     "build:cjs": "yarn check-usage && tsc --project tsconfig.cjs.json --outDir lib/cjs && tsc-alias -p tsconfig.cjs.json",
-    "build": "tsc",
+    "build": "tsc --noEmit",
     "check-usage": "tsc --noEmit",
     "start": "node dist/index.js",
     "test": "jest --runInBand",
