--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "scripts": {
     "clean:maps": "find lib -name '*.map' -delete",
-    "build-both": "rm -rf ./lib yarn check-usage && yarn build:esm && yarn build:cjs && yarn clean:maps",
-    "build:esm": "yarn check-usage && tsc --project tsconfig.esm.json && tsc-alias -p tsconfig.esm.json",
-    "build:cjs": "yarn check-usage && tsc --project tsconfig.cjs.json --outDir lib/cjs && tsc-alias -p tsconfig.cjs.json",
+    "build-both": "rm -rf ./lib yarn check-ts && yarn build:esm && yarn build:cjs && yarn clean:maps",
+    "build:esm": "yarn check-ts && tsc --project tsconfig.esm.json && tsc-alias -p tsconfig.esm.json",
+    "build:cjs": "yarn check-ts && tsc --project tsconfig.cjs.json --outDir lib/cjs && tsc-alias -p tsconfig.cjs.json",
     "build": "tsc --noEmit",
     "check-ts": "tsc --noEmit",
     "start": "node dist/index.js",
