--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -32,6 +32,7 @@
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dynamodb-provider": "^3.1.1",
     "lucide-react": "^0.294.0",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
