--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -7,14 +7,17 @@
   "bin": {
     "dynamodb-playground": "./bin/cli.js"
   },
-  "main": "./dist/cli.js",
+  "main": "./src/cli.ts",
   "files": [
-    "dist",
-    "bin"
+    "src",
+    "bin",
+    "dist/client",
+    "tsconfig.json"
   ],
   "scripts": {
     "dev": "tsx src/cli.ts",
-    "build": "vite build && tsc -p tsconfig.build.json",
+    "build": "vite build",
+    "pack": "npm run build && npm pack",
     "check-ts": "tsc --noEmit"
   },
   "dependencies": {
@@ -22,34 +25,34 @@
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
-    "@radix-ui/react-tooltip": "^1.2.8",
-    "vite": "^5.4.0"
-  },
-  "devDependencies": {
-    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.17.0",
-    "@types/node": "^20.10.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "dynamodb-provider": "^3.1.1",
     "lucide-react": "^0.294.0",
     "postcss": "^8.4.32",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
+    "react": "^18.2.0",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss": "^3.4.0",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "vite": "^5.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "dynamodb-provider": "^3.1.1"
   },
   "peerDependencies": {
     "dynamodb-provider": ">=3.0.0"
