`**.test.ts` files now properly excluded from build

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -31,5 +31,5 @@
 
   "include": ["src/**/*.ts", "./src/**/*.d.ts"],
 
-  "exclude": ["node_modules", "lib", "**/*-test.ts", "**/__tests__/**", "**/*.spec.ts", "docs/**"]
+  "exclude": ["node_modules", "lib", "**/*-test.ts", "**/__tests__/**", "**/*.spec.ts", "**/*.test.ts", "docs/**", "packages/**"]
 }
