--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -15,7 +15,7 @@
     "tsconfig.json"
   ],
   "scripts": {
-    "dev": "tsx src/cli.ts",
+    "dev": "rm -rf ./dist && tsx src/cli.ts",
     "build": "vite build",
     "pack": "npm run build && npm pack",
     "check-ts": "tsc --noEmit"
@@ -38,12 +38,12 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.294.0",
     "postcss": "^8.4.32",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "react": "^18.2.0",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7",
     "tailwindcss": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.7.0",
     "typescript": "^5.3.0",
     "vite": "^5.4.0"
@@ -52,7 +52,7 @@
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "dynamodb-provider": "^3.1.1"
+    "dynamodb-provider": "^3.1.2"
   },
   "peerDependencies": {
     "dynamodb-provider": ">=3.0.0"
